# merges

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  doctor.rs  git.rs  github.rs  lib.rs  main.rs  split.rs  state.rs  ui.rs
src/commands/: add.rs  clean.rs  init.rs  mod.rs  move.rs  push.rs  split.rs  status.rs  sync.rs  touch.rs
src/mcp/: mod.rs  tools.rs
tests/: add_command.rs  atomic_rollback.rs  auto_split.rs  doctor.rs  mcp_tools.rs  move_command.rs  split_noninteractive.rs  status_behind.rs  sync_checkout.rs  touch_files.rs  touch_integration.rs  worktrees.rs
